# PTCG-Bench

./: .gitignore  LICENSE  README.md  card_data_cache.json  pyproject.toml  run_game.py
backend/: README.md  card_image_service.py  main.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActionPanel.tsx  CardModal.tsx  CardSelectionOverlay.tsx  CardSlot.tsx  DeckCard.tsx  DeckManager.tsx  DeckSelectModal.tsx  DiscardModal.tsx  EnergyIcon.tsx  GameBoard.tsx  GameLog.tsx  Leaderboard.tsx  NavBar.tsx  PlayerArea.tsx  ReplayBoard.tsx  ReplayControls.tsx  ReplayViewer.tsx
frontend/src/services/: api.ts
frontend/src/stores/: deckStore.ts  dragStore.ts  gameStore.ts  replayStore.ts
ptcgbench/: __init__.py
ptcgbench/agents/: __init__.py  base_agent.py  charizard_heuristic_agent.py  expel_agent.py  ltm_agent.py  prompt_evolving_agent.py  random_agent.py  react_agent.py  reflexion_agent.py  skill_evolving_agent.py
ptcgbench/bench/: charting.py  eval_pipeline.py  glicko2.py  leaderboard.py  live_progress.py  metrics.py  plot_ratings.py
ptcgbench/services/: tcgdex_service.py
scripts/: record_replay.py  refresh_card_cache.py
tests/: conftest.py
tests/agents/: test_context_manager.py  test_executor.py  test_llm_agent_wiring.py  test_observer.py  test_profile.py  test_reflection_agent.py  test_reflexion_agent.py  test_schema.py  test_skill_registry.py  test_skill_writer.py  test_summary_agent.py
tests/bench/: test_charting.py  test_metrics.py
(+32 files in other folders)
